refact(expandablecontainer&sidebar): changes internals of component to allow for gap to correctly space items inside of sidebar

--- a/components/SideBar/styles.module.css
+++ b/components/SideBar/styles.module.css
@@ -13,7 +13,10 @@
 }
 
 .contents {
+  display: flex;
   flex: 1;
+  flex-direction: column;
+  gap: var(--spacing-md);
   padding: 10px;
 }
 
